--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "name": "data-server",
   "version": "1.0.0",
   "description": "This is the main data server for Pradeep's IIOT",
+  "type": "module",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "author": "Lovely Sharma",
   "license": "ISC",
@@ -15,6 +17,7 @@
     "compression": "^1.7.5",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
