--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
     "socket.io": "^4.8.1",
     "validator": "^13.12.0",
     "winston": "^3.17.0"
+  },
+  "devDependencies": {
+    "prisma": "^6.1.0"
   }
 }
