--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.21.2",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
+    "libphonenumber-js": "^1.11.19",
     "morgan": "^1.10.0",
     "mqtt": "^5.10.3",
     "node-cache": "^5.1.2",
