--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
+    "start": "npx prisma generate && node app.js",
     "dev": "nodemon app.js"
   },
   "author": "Lovely Sharma",
